# ctoml

./: CMakeLists.txt
src/: tomlvalue.cc
src/include/: tomlvalue.h
